Fixed [904706] Thimble pages not scrollable on iOS

--- a/public/static/stylesheets/makedetails.less
+++ b/public/static/stylesheets/makedetails.less
@@ -251,3 +251,21 @@ body {
     .height-width( @xlarge );
   }
 }
+
+//iPad detection
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px){
+  .thimble-project-container {
+    // For iOS scrolling within iFrame
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+  }
+}
+
+//iPhone detection
+@media only screen and (max-device-width: 480px) {
+	.thimble-project-container {
+    // For iOS scrolling within iFrame
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+  }
+}
